// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeNode component collapsed mode set correctly 1`] = `
<g
  transform="translate(0 0)"
>
  <polygon
    fill="steelblue"
    points="0 0,9 -9, 9 9"
    stroke="darkblue"
    stroke-width="1.2"
  />
</g>
`;

exports[`TreeNode component default node renders correctly 1`] = `
<g
  transform="translate(0 0)"
>
  <circle
    class=""
    fill="steelblue"
    r="3"
    stroke="darkblue"
    stroke-width="1.2"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </circle>
</g>
`;

exports[`TreeNode component fill color set correctly 1`] = `
<g
  transform="translate(0 0)"
>
  <circle
    class=""
    fill="black"
    r="3"
    stroke="darkblue"
    stroke-width="1.2"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </circle>
</g>
`;

exports[`TreeNode component node position in circular mode set correctly 1`] = `
<g
  transform="rotate(-90)translate(0)"
>
  <circle
    class=""
    fill="steelblue"
    r="3"
    stroke="darkblue"
    stroke-width="1.2"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </circle>
</g>
`;

exports[`TreeNode component node size set correctly 1`] = `
<g
  transform="translate(0 0)"
>
  <circle
    class=""
    fill="steelblue"
    r="5"
    stroke="darkblue"
    stroke-width="2"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </circle>
</g>
`;

exports[`TreeNode component node x set correctly 1`] = `
<g
  transform="translate(0 100)"
>
  <circle
    class=""
    fill="steelblue"
    r="3"
    stroke="darkblue"
    stroke-width="1.2"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </circle>
</g>
`;

exports[`TreeNode component node y set correctly 1`] = `
<g
  transform="translate(100 0)"
>
  <circle
    class=""
    fill="steelblue"
    r="3"
    stroke="darkblue"
    stroke-width="1.2"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </circle>
</g>
`;

exports[`TreeNode component show mode set correctly 1`] = `
<g
  transform="translate(0 0)"
>
  <circle
    class="transparent"
    fill="steelblue"
    r="3"
    stroke="darkblue"
    stroke-width="1.2"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </circle>
</g>
`;

exports[`TreeNode component stroke color set correctly 1`] = `
<g
  transform="translate(0 0)"
>
  <circle
    class=""
    fill="steelblue"
    r="3"
    stroke="black"
    stroke-width="1.2"
  >
    <animatetransform
      attributeName="transform"
      begin="0s"
      dur="1s"
      from="0 0"
      to="1 1"
      type="scale"
    />
  </circle>
</g>
`;
